syntax = "proto3";

option csharp_namespace = "GrpcProto.HelloContract";

service Hello {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}